# overlay-engine

./: .gitignore  Cargo.toml  END-TO-END-TESTING.md  README.md  _check.ps1  build-all.ps1  config.ini  install.ps1  uninstall.ps1
.claude/plan/: curried-nibbling-wombat.md
.kiro/specs/animation-and-viewport-fix/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/canvas-monitor-lifecycle/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/hotfix-visible-render/: bugfix.md  design.md  tasks.md
.kiro/specs/hotfix-visible-render/task-2-baseline-logs/: README.md
.kiro/specs/hotfix-visible-render/task-3.6-post-fix-logs/: README.md
core-server/: Cargo.toml
core-server/src/: error.rs  lib.rs  log.rs  process_manager.rs  server_task.rs
core-server/src/ipc/: cmd_decoder.rs  mod.rs  protocol.rs  server.rs  shmem.rs
core-server/src/renderer/: dcomp.rs  mediafoundation.rs  mod.rs  painter.rs  resources.rs  wic.rs
core-server/tests/: bug_condition_exploration.proptest-regressions  bug_condition_exploration.rs  hotfix_visible_render_exploration.rs  lifecycle_integration.rs  preservation.rs  rename_and_structure_checks.rs
core-server/tests/preservation_oracles/: README.md  desktop_window_attach_trace.txt  high_rate_bounds.txt  multi_monitor_independence.txt  world_only_hashes.txt
csharp-shell/: App.xaml.cs  MainPage.xaml.cs  OverlayWidget.csproj  OverlayWidget_Dev.cer  Package.appxmanifest
csharp-shell/Native/: CompositionPump.cs  RendererPInvoke.cs
csharp-shell/Properties/: AssemblyInfo.cs
csharp-shell/Strings/en-US/: Resources.resw
csharp-shell/scripts/: install-dev.ps1
docs/: release-build.md  v1.0-server-bootstrap.md
docs/spec/: painter-abi-v0.7.md  painter-abi-v1.0.md
installer/: overlay-engine.iss
monitors/desktop-window/: Cargo.toml  README.md  SPEC.md
monitors/desktop-window/src/: dcomp.rs  lib.rs  lifecycle.rs  proto.rs  singleton.rs  title.rs
monitors/game-bar-widget/: App.xaml  App.xaml.cs  MainPage.xaml  MainWidget.xaml  MainWidget.xaml.cs  OverlayWidget.csproj  Package.appxmanifest  Refactor_Spec.md  install.ps1
monitors/game-bar-widget/Native/: CompositionPump.cs  ExternalSurfacePump.cs  OverlayPump.cs  RendererPInvoke.cs  ScreenInterop.cs
monitors/game-bar-widget/Strings/zh-CN/: Resources.resw
rust-renderer/: Cargo.toml
rust-renderer/src/: error.rs  ffi.rs  lib.rs  log.rs
rust-renderer/src/renderer/: device.rs  mediafoundation.rs  mod.rs  painter.rs  resources.rs  swapchain.rs  wic.rs
scripts/: build-release.ps1
spikes/dcomp-cross-process/: Cargo.toml  README.md
spikes/dcomp-cross-process/src/: dcomp.rs  lib.rs
