[package]
name = "desktop-window-monitor"
version = "0.0.1"
edition = "2021"
description = "Overlay engine desktop-window monitor prototype"
publish = false

[lib]
name = "desktop_window"
path = "src/lib.rs"

[[bin]]
name = "desktop-window-monitor"
path = "src/bin/monitor.rs"

[dependencies]
core-server = { path = "../../core-server" }
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_CompositionSwapchain",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Foundation_Numerics",
] }
windows-core = "0.59"
tokio = { version = "1", features = ["full"] }
bytes = "1.5"
anyhow = "1.0"

[dev-dependencies]
proptest = "1.5"
